[package]
name = "whatshouldwewatch"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["serde"] }
json = "0.12.4"
ratatui = { version = "0.29.0", features = ["all-widgets", "serde"] }
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive", "serde_derive"] }
tokio = { version = "1.44.0", features = ["full"] }
